--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dom-confetti": "^0.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.16.0",
